# MatBot

./: .gitignore  Cargo.toml  README.md  build_release.sh  settings-default.json  settings.json
materials/: materials.db
src/: config.rs  event_handler.rs  lib.rs  main.rs  materials.rs
src/commands/: cmds.rs  mod.rs  requests.rs  res.rs  responses.rs  utils.rs
src/src/: main.rs
src/src/disbot/: config.rs
tests/: settings_parser.rs
