[package]
name = "matbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rusqlite = "0.26.3"
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
