[package]
name = "matbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rusqlite = "0.26.3"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "framework", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"
