[package]
name = "matbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rusqlite = { version = "0.26.3", features = ["bundled"] }
serenity = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"
chrono = "0.4.19"
url = "2.2.2"
ansi_term = "0.12"

